git remote add origin https://github.com/KangBin2005/WebAppDev_Project.git

--- a/templates/includes/staff_navbar.html
+++ b/templates/includes/staff_navbar.html
@@ -58,7 +58,7 @@
             </li>
 
             <!-- Activity Management Dropdown -->
-            <li class="nav-item dropdown {% if current_page in ['activity_participants', 'activity_public'] %}active{% endif %}">
+            <li class="nav-item dropdown {% if current_page in ['manage_activities', 'activity_participants', 'activity_public'] %}active{% endif %}">
                 <a class="nav-link dropdown-toggle text-white" href="#" id="activityDropdown" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Activity Management
@@ -72,7 +72,7 @@
             </li>
 
             <!-- Enquiry Management Dropdown -->
-            <li class="nav-item dropdown {% if current_page in ['enquiry_participants', 'enquiry_public'] %}active{% endif %}">
+            <li class="nav-item dropdown {% if current_page in ['manage_enquires', 'enquiry_participants', 'enquiry_public'] %}active{% endif %}">
                 <a class="nav-link dropdown-toggle text-white" href="#" id="enquiryDropdown" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Enquiry Management
