--- a/templates/Staff/activity_management.html
+++ b/templates/Staff/activity_management.html
@@ -1,6 +1,8 @@
 {% extends "Staff/Staff_base.html" %}
-{% block title %}SGEnable - Our Outlets & Map{% endblock %}
+{% block title %}SGEnable - Activity Management {% endblock %}
 
 {% block content %}
+
 <h1>Activity Management</h1>
+
 {% endblock %}
