--- a/templates/Staff/activity_participants.html
+++ b/templates/Staff/activity_participants.html
@@ -1,9 +1,8 @@
 {% extends "Staff/Staff_base.html" %}
-{% block title %}SGEnable - Activity Management (Participants){% endblock %}
+{% block title %}SGEnable - Activity Management (Participants) {% endblock %}
 
 {% block content %}
-<div class="container mt-4">
-    <h1>Activity Management - Participants</h1>
-    <p>This section manages activities for registered participants.</p>
-</div>
+
+<h1>Activity Management</h1>
+
 {% endblock %}
