--- a/templates/Public/home.html
+++ b/templates/Public/home.html
@@ -1,5 +1,45 @@
 {% extends "Public/base.html" %}
 {% block content %}
-<h1>Home Page</h1>
-<p>Main landing page content goes here</p>
+<div class="col-md-12 h-75 carousel slide" id="hero-carousel"style="background-color : grey" data-bs-ride="carousel" data-bs-interval="3000">
+
+    <!-- Carousel -->
+    <div class="carousel-inner h-100">
+        <div class="carousel-item h-100">
+            <img src="../static/images/public_home_hero_1.jpg" class="d-block w-100 h-100">
+        </div>
+        <div class="carousel-item active h-100">
+            <img src="../static/images/public_home_hero_2.jpg" class="d-block w-100 h-100">
+        </div>
+        <div class="carousel-item h-100">
+            <img src="../static/images/public_home_hero_3.png" class="d-block w-100 h-100">
+        </div>
+    </div>
+
+    <!-- Carousel Controls-->
+    <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<div class="container w-100 h-25" style="bg-color : grey">
+    <div class="row">
+        <div class ="col">
+            Service 1
+        </div>
+        <div class ="col">
+            Service 2
+        </div>
+        <div class ="col">
+            Service 3
+        </div>
+</div>
+
+
+
+</div>
 {% endblock %}
