--- a/templates/Public/base.html
+++ b/templates/Public/base.html
@@ -11,13 +11,19 @@
     <!-- Font Awesome CSS for icons like the bell -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
+    <!--    Custom CSS-->
+    <link rel="stylesheet" href="/static/css/public.css">
+
+    <!--    Bootstrap Javascript-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 <body>
     {% block navbar %}
         {% include 'includes/public_navbar.html' %}
     {% endblock %}
 
-    <div class="container-fluid vh-100">
+    <div class="container-fluid">
         {% block content %}
         {% endblock %}
     </div>
