--- a/static/css/public.css
+++ b/static/css/public.css
@@ -29,8 +29,20 @@ img {
         text-align: center;
         color: white;
     }
+
+.jumbotron {
+    background-image: url("/static/images/public_donations_jumbotron.jpg.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.jumbotron * {
+    text-align: center;
+    color: white;
+}
 .contact-hero h1 {
     font-size: 2.5rem;
     font-weight: 700;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+
 }
