--- a/static/css/public.css
+++ b/static/css/public.css
@@ -1,16 +1,11 @@
 #hero-carousel {
-    height:85vh
+    height:85vh;
+    background: #495057;
+    object-fit: cover;
 }
 
-img {
-    object-fit: contain;
-    background-size: cover;
-    min-width: 100%;
-    min-height: 100%;
-}
-
-.card-img-top img{
-    object-fit: contain;
+.carousel-item img{
+    object-fit: cover;
 }
 
 .contact-hero {
@@ -29,12 +24,10 @@ img {
         text-align: center;
         color: white;
     }
-
 .contact-hero h1 {
     font-size: 2.5rem;
     font-weight: 700;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-
 }
 
 .jumbotron {
