--- a/templates/Public/base.html
+++ b/templates/Public/base.html
@@ -11,6 +11,9 @@
     <!-- Font Awesome CSS for icons like the bell -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
+    <!--    Bootstrap Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
     <!--    Custom CSS-->
     <link rel="stylesheet" href="/static/css/public.css">
 
