--- a/templates/Public/home.html
+++ b/templates/Public/home.html
@@ -1,10 +1,11 @@
 {% extends "Public/base.html" %}
+{% block title %}Home - EnableSG{% endblock %}
 {% block content %}
 <!--Carousel-->
 <div id="hero-carousel"
      class="carousel slide col-md-12"
      data-ride="carousel"
-     data-interval="1000">
+     data-interval="0">
     <!-- Carousel Indicators-->
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -19,7 +20,7 @@
             <img src="../static/images/public_home_hero_2.jpg" class="d-block w-100">
         </div>
         <div class="carousel-item h-100">
-            <img src="../static/images/public_home_hero_3.png" class="d-block w-100">
+            <img src="../static/images/public_home_hero_3.jpg" class="d-block w-100">
         </div>
     </div>
 
