--- a/templates/includes/public_navbar.html
+++ b/templates/includes/public_navbar.html
@@ -26,6 +26,25 @@
     background-color: #f8f9fa !important;
     color: #007BFF !important;
   }
+
+  /*Cart*/
+ .cart {
+     font-size: 30px;
+     position: relative;
+     border-radius: 4px;
+     padding: 5px;
+ }
+
+ .cart-amount{
+     font-size: 16px;
+     background-color: red;
+     color: white;
+     position: absolute;
+     top: -10px;
+     right: -5px;
+     padding: 3px;
+     border-radius: 3px;
+ }
 </style>
 
 <nav class="navbar navbar-expand-lg"
@@ -84,8 +103,16 @@
                 <a class="nav-link text-white" href="{{ url_for('login') }}">Login</a>
             </li>
             <li class="nav-item ml-2">
-                <a class="btn btn-outline-light" href="{{ url_for('signup') }}">Sign Up</a>
+                <a class="btn btn-outli ne-light" href="{{ url_for('signup') }}">Sign Up</a>
             </li>
+            {% if current_page == 'public_donations' %}
+                <li class="nav-item ml-2 mr-1">
+                    <div class="cart btn">
+                        <i class="bi bi-cart"></i>
+                        <div class="cart-amount">0</div>
+                    </div>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
