--- a/templates/Staff/change_password.html
+++ b/templates/Staff/change_password.html
@@ -30,6 +30,8 @@
             <input type="password" class="form-control" name="confirm_password" id="confirm_password" required>
         </div>
         <button type="submit" class="btn btn-primary">Change Password</button>
+        <a href="{{ url_for('profile') }}" class="btn btn-secondary ml-2">Cancel</a>
     </form>
 </div>
+
 {% endblock %}
