--- a/templates/Public/donations.html
+++ b/templates/Public/donations.html
@@ -14,7 +14,7 @@
             <div class="card h-100">
                 <img src="{{ product.image_url }}" class="card-img-top" alt="{{ product.name }}">
                 <div class="card-body">
-                    <h5 class="card-title">{{ product.name }}</h5>
+                    <h5 class="card-title">{{ product.product }}</h5>
                     <p class="card-text">{{ product.description }}</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <span class="h5 mb-0">${{ '%.2f'|format(product.price) }}</span>
