--- a/templates/includes/staff_navbar.html
+++ b/templates/includes/staff_navbar.html
@@ -129,7 +129,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-white" href="#" id="userDropdown" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Staff Name
+                    {{ session['user'] }} (Staff)
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                     <a class="dropdown-item" href="#">Profile</a>
