--- a/templates/Staff/account_management.html
+++ b/templates/Staff/account_management.html
@@ -65,7 +65,7 @@
                     </a>
                 </td>
                 <td>
-                    <form action="{{ url_for('activity_public_delete', id=account.get_user_id()) }}" method="POST">
+                    <form action="{{ url_for('delete_account', id=account.get_user_id()) }}" method="POST">
                         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal_{{ account.get_user_id() }}">
                             <i class="fas fa-trash-alt mr-1"></i>
                             Delete
@@ -92,7 +92,6 @@
                                         <input type="submit" value="Delete" class="btn btn-danger">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
