--- a/templates/Public/donations.html
+++ b/templates/Public/donations.html
@@ -1,6 +1,7 @@
 {% extends "Public/base.html" %}
-{% block title %}Shop{% endblock %}
+{% block title %}SG Enable - Shop{% endblock %}
 {% block content %}
+
 <div class="jumbotron">
     <h1>Support Our Mission</h1>
     <p class="lead">Gifts Made With Love By Our Volunteers</p>
