--- a/templates/Public/home.html
+++ b/templates/Public/home.html
@@ -1,5 +1,5 @@
 {% extends "Public/base.html" %}
-{% block title %}Home - EnableSG{% endblock %}
+{% block title %}SG Enable - Home{% endblock %}
 {% block content %}
 <!--Carousel-->
 <div id="hero-carousel"
