--- a/templates/Staff/enquiry_participants.html
+++ b/templates/Staff/enquiry_participants.html
@@ -65,7 +65,7 @@
             <div class="col-md-6 mb-4">
                 <div class="card shadow-sm h-100">
                     <div class="card-body">
-
+                        <small class="text-muted">Enquiry ID: {{ enquiry.get_enquiry_id() }}</small>
                         <h5 class="card-title mt-2 mb-3">Message: {{ enquiry.get_message() }}</h5>
 
                         <div class="d-flex justify-content-between align-items-center mb-3">
