--- a/templates/Staff/product_create.html
+++ b/templates/Staff/product_create.html
@@ -23,7 +23,7 @@
                     </div>
 
                     <input type="submit" value="Create" class="btn btn-primary"/>
-                    <a href="{{ url_for('/Staff/manage_product') }}" class="btn btn-secondary ml-2">Cancel</a>
+                    <a href="{{ url_for('manage_product') }}" class="btn btn-secondary ml-2">Cancel</a>
                 </form>
             </div>
         </div>
