--- a/templates/Staff/product_management.html
+++ b/templates/Staff/product_management.html
@@ -1,6 +1,24 @@
 {% extends "Staff/Staff_base.html" %}
-{% block title %}Product Management{% endblock %}
-
+{% block title %}SG Enable - Manage Products{% endblock %}
 {% block content %}
+    <div class="d-flex flex-row justify-content-between mt-4">
+        <h1>Manage Products</h1>
+        <a href="{{ url_for('create_product') }}" class="btn btn-success mr-3 d-flex align-items-center justify-content-center">
+            <i class="fas fa-plus mr-1"></i> Add Product
+        </a>
+    </div>
+
+    <div class="col-md-12">
+        <table>
+            <thead class="">Products</thead>
+                <tr>
+                    <th>Product ID</th>
+                    <th>Product</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th>Image URL</th>
+                </tr>
+        </table>
+    </div>
 
 {% endblock %}
