Revert "Updated files"
This reverts commit 9c202613379e1331477307e323dd3826634cbbda.

--- a/templates/includes/staff_navbar.html
+++ b/templates/includes/staff_navbar.html
@@ -93,7 +93,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="storeDropdown">
                     <a class="dropdown-item {% if current_page == 'product_management' %}active{% endif %}"
-                       href="{{ url_for('manage_product') }}">Products</a>
+                       href="{{ url_for('create_product') }}">Products</a>
                     <a class="dropdown-item {% if current_page == 'transaction_management' %}active{% endif %}"
                        href="{{ url_for('enquiry_public') }}">Transactions</a>
                 </div>
