--- a/templates/Staff/account_create.html
+++ b/templates/Staff/account_create.html
@@ -24,10 +24,6 @@
                 {{ render_field(form.email, class="form-control") }}
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">
-                <i class="fas fa-save"></i> Create
-        </button>
-        <a href="{{ url_for('manage_accounts') }}" class="btn btn-secondary ml-2">Cancel</a>
+        <input type="submit" value="Create" class="btn btn-primary"/>
     </form>
 {% endblock %}
-
