--- a/templates/Staff/account_update.html
+++ b/templates/Staff/account_update.html
@@ -24,9 +24,7 @@
                 {{ render_field(form.email, class="form-control") }}
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">
-                <i class="fas fa-save"></i> Update
-        </button>
+        <input type="submit" value="Submit" class="btn btn-primary"/>
         <a href="{{ url_for('manage_accounts') }}" class="btn btn-secondary ml-2">Cancel</a>
     </form>
 {% endblock %}
