Updated product management

--- a/templates/Public/donations.html
+++ b/templates/Public/donations.html
@@ -11,7 +11,7 @@
     <h2 class="mb-4">Browse Our Gifts</h2>
     <div class="row g-4">
         {% for product in products %}
-        <div class="col-md-4">
+        <div class="product-listing col-md-4">
             <div class="card h-100">
                 <img src="{{ product.image_url }}" class="card-img-top" alt="{{ product.name }}">
                 <div class="card-body">
