--- a/static/css/public.css
+++ b/static/css/public.css
@@ -31,7 +31,7 @@
 }
 
 .jumbotron {
-    background-image: url("/static/images/public_donations_jumbotron.jpg.jpg");
+    background-image: url("/static/images/public_donations_jumbotron.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -39,4 +39,8 @@
 .jumbotron * {
     text-align: center;
     color: white;
+}
+
+.product-listing {
+
 }
