--- a/templates/Staff/product_management.html
+++ b/templates/Staff/product_management.html
@@ -1,52 +1,47 @@
 {% extends "Staff/Staff_base.html" %}
 {% block title %}SG Enable - Manage Products{% endblock %}
 {% block content %}
-    <div class="d-flex flex-row justify-content-between mb-2 mt-4">
-        <h1>Manage Products</h1>
-        <a href="{{ url_for('create_product') }}" class="btn btn-success mr-3 d-flex align-items-center justify-content-center">
-            <i class="fas fa-plus mr-1"></i> Add Product
-        </a>
-    </div>
+<div class="d-flex flex-row justify-content-between mb-2 mt-3">
+    <h1>Manage Products</h1>
+    <a href="{{ url_for('create_product') }}" class="btn btn-success mr-3 d-flex align-items-center justify-content-center">
+        <i class="fas fa-plus mr-1"></i> Add Product
+    </a>
+</div>
 
-    <div>
-        {% if count > 0 %}
-            <p>Displaying <strong>{{ count }}</strong> {{ 'product' if count == 1 else 'products  ' }}.</p>
-        {% else %}
-            <p class="text-danger">No products found.</p>
-        {% endif %}
-    </div>
+<div>
+    {% if count > 0 %}
+        <p>Displaying <strong>{{ count }}</strong> {{ 'product' if count == 1 else 'products' }}.</p>
+    {% else %}
+        <p class="text-danger">No products found.</p>
+    {% endif %}
+</div>
 
-    <div>
-        <table class="table">
-            <thead>
+<div>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Product ID</th>
+            <th>Product</th>
+            <th>Description</th>
+            <th>Price</th>
+            <th>Image URL</th>
+        </tr>
+        </thead>
+        <tbody>
+            {% for product in product_list %}
             <tr>
-                <th>Product ID</th>
-                <th>Product</th>
-                <th>Description</th>
-                <th>Price</th>
-                <th>Image URL</th>
+                <td>{{ product.get_product_id() }}</td>
+                <td>{{ product.get_product() }}</td>
+                <td>{{ product.get_description() }}</td>
+                <td>{{ product.get_price() }}</td>
+                <td>
+                    <a href="{{ product.get_image_url() }}" target="_blank" class="btn btn-outline-primary btn-sm">
+                        View Image
+                    </a>
+                </td>
             </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    {% for product in product_list %}
-                    <td>{{ account.get_user_id() }}</td>
-                        <td>{{ account.get_first_name() }}</td>
-                        <td>{{ account.get_last_name() }}</td>
-                        <td>{{ account.get_gender() }}</td>
-                        {% if account.get_role() == 'M' %}
-                            <td>Member</td>
-                        {% elif account.get_role() == 'P' %}
-                            <td>PWID</td>
-                        {% elif account.get_role() == 'C' %}
-                            <td>Caregiver</td>
-                        {% endif %}
-                        <td>{{ account.get_email() }}</td>
-                </tr>
-
-            </tbody>
-        </table>
-    </div>
-
-
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
