Reapply "Update activity_public.html"
This reverts commit cabe5cdef920e17171e72331709db5f782745163.

--- a/templates/includes/staff_navbar.html
+++ b/templates/includes/staff_navbar.html
@@ -54,6 +54,15 @@
                 <a class="nav-link text-white" href="{{ url_for('dashboard') }}">Dashboard</a>
             </li>
             <li class="nav-item {% if current_page == 'account_management' %}active{% endif %}">
+                <a class="nav-link text-white" href="{{ url_for('manage_accounts') }}">Account
+                    Management</a>
+            </li>
+
+            <li class="nav-item {% if current_page == 'analytics' %}active{% endif %}">
+                <a class="nav-link text-white" href="{{ url_for('analytics') }}">Analytics</a>
+            </li>
+
+
 
             <!-- Activity Management Dropdown -->
             <li class="nav-item dropdown {% if current_page in ['manage_activities', 'activity_participants', 'activity_public'] %}active{% endif %}">
