--- a/templates/Staff/product_create.html
+++ b/templates/Staff/product_create.html
@@ -19,7 +19,7 @@
                         {{ render_field(form.price, class="form-control") }}
                     </div>
                     <div class="form-group">
-                        {{ render_field(form.image_url, class="form-control") }}
+                        {{ render_field(form.image_name, class="form-control") }}
                     </div>
 
                     <input type="submit" value="Create" class="btn btn-primary"/>
